--- a/work2.html
+++ b/work2.html
@@ -39,13 +39,13 @@
             </div>
             <div style="border:1px solid black;background-color: purple;height: 597px;width: 300px;position: absolute;top:137px;right: 250px;">
                 <h1 style="text-align: center;">En relation</h1>
-                <li><a href="gfhh">combident ainime image des</a></li>
-                <li><a href="gfgf">combident animew image</a></li>
-                <li><a href="ff">bien anudndh imm</a></li>
-                <li><a href="ff">En bien</a></li>
+                <li style="padding-left: 10px;"><a href="gfhh">combident ainime image des</a></li><br><br>
+                <li style="padding-left: 10px;"><a href="gfgf">combident animew image</a></li><br><br>
+                <li style="padding-left: 10px;"><a href="ff">bien anudndh imm</a></li><br><br>
+                <li style="padding-left: 10px;"><a href="ff">En bien</a></li>
             
             </div>
             <div style="border: 1px solid black;background-color:white; height:40px;width: 1600px ;padding-left: 10px;margin-left: 50px;">
-            <p>copyright 2060 par persource.Tows droft revresal</p></div>
+            <p>©copyright 2060 par persource.Tows droft revresal</p></div>
         </body>
 </html>
