--- a/images.html
+++ b/images.html
@@ -6,14 +6,14 @@
     <title>images</title>
 </head>
 <body>
+    <h1 style="text-align: center;">Image</h1>
     <a href="work3.html">Index</a>
     <a href="about.html">About</a>
-    <a href="pages.html">pages</a>
-    <h1 style="text-align: center;">Image</h1>
+    <a href="pages.html">pages</a><br><br>
     <div style="border: 1px solid black;width: 350px;height:450px;">
     <img src="x.jpeg" width="350" height="450">
     </div>
-    <div style="border: 1px solid black;width: 350px;height: 450px; position: absolute;right: 630px;top: 83px;">
+    <div style="border: 1px solid black;width: 350px;height: 450px; position: absolute;right: 630px; top: 83px;">
     <img src="y.jpg.avif" width="350" height="450">
     </div>
     <div>
