--- a/one.html
+++ b/one.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>one</h1>
+    <h1 style="text-align: center;">one</h1>
+    <a href="pages.html">back</a>
 </body>
 </html>
