--- a/pages.html
+++ b/pages.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 
-    <h1>pages</h1>
+    <h1 style="text-align: center;">pages</h1>
+    <a href="work3.html">Index</a>
     <a href="about.html">About</a>
     <a href="images.html">image</a>
-    <a href="work3.html">Index</a>
     <div>
     <a href="pro.html">pro</a>
     <a href="one.html">one</a>
