--- a/pro.html
+++ b/pro.html
@@ -6,7 +6,8 @@
     <title>pro</title>
 </head>
 <body>
-    <h1>pro</h1>
+    <h1 style="text-align: center;">pro</h1>
+    <a href="pages.html">back</a>
     
 </body>
 </html>
