--- a/product.html
+++ b/product.html
@@ -6,7 +6,7 @@
     <title>product</title>
 </head>
 <body>
-    <h1>Products</h1>
+    <h1 style="text-align: center;">Products</h1>
     <a href="images.html">back</a>
     
    <div><img src="p1.jpeg" width="500" height="500">
